# detsign

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  conanfile.py  configure_clangcl_x.sh  detsign.c  ecm.yaml  test.py
cmake/Hunter/: config.cmake
cmake/Modules/: Findsodium.cmake
cmake/cmake-utils/: cmake-utils.cmake  cmu_cflags.cmake  cmu_detect_env.cmake  cmu_macros.cmake
